Version 0.2.3 - UNRELEASED
 * fixed "overlap" calculation

Version 0.2.2 - 2010-03-17
 * added a graphical installer for Windows (via distutils)
 * fixed broken commandline parameter "--template"
 * added workaround for ODE collision detection, that is broken under specific circumstances
 * fixed hang with PushCutter and ODE on Windows
 * fixed "division by zero" error in non-ODE mode
 * allow to disable ODE via commandline option
 * bugs fixed in cylindrical and toroidal cutter when using dropcutter on horizontal triangles
 * fixed "setup.py" for distutils packaging (contributed by Arthur Magill)

Version 0.2.1 - 2010-03-09
 * fixed code that depended on GTK 2.16 (instead of 2.12)
 * view settings "light", "shadow" and "polygon fill" are now configurable
 * documented version problems with Debian "Lenny" and Ubuntu (before "Karmic")

Version 0.2 - 2010-03-04
 * added an alternative GTK interface with additional features:
  * configurable 3D view settings: model / toolpath / axis / drill progress / frame rate / colors
  * manipulation of the model: rotation, flip, swap, scale, move
  * saving the model to an ascii STL file
  * load/save processing settings from/to a file
  * handling of multiple processing templates (e.g. "Rough", "Semi-finish" and "Finish")
  * configure "material allowance" for a minimum distance between drill and model
  * configure the "safety height" for the machine
  * allow to manage and export (gcode) multiple toolpaths at once
  * based on GtkGlExt (for OpenGL)
  * visualize invalid processing setting combinations
  * configure "overlap" instead of "lines" and "samples"
  * configure "maximum step down" instead of "layers"
  * show a progress bar during calculations
  * basic lightning for the OpenGL view
 * improved performance by (optionally) using the "Open Dynamics Engine" (ODE) for
   collision detection

Version 0.1.11b - 2010-02-25
 * fix minor release mistake (missing "STLExporter")

Version 0.1.11 - 2010-02-19